
The second two work well. skipfocus is not thoroughly implemented in the e
code, ie. you can still focus =) I'm about to go through and add some logic
for that... Then I was gonna make non-ALT button clicks on skip_focus
windows bring up root menus...

Lots of changes, so check for bugs =)


-------------------------------------------------------------------------------

Mon Feb 21 21:48:34 GMT 2000
(gilbertt)

Warning removal. I was a bad boy.


-------------------------------------------------------------------------------

Mon Feb 21 21:50:20 GMT 2000
(gilbertt)

and this.


-------------------------------------------------------------------------------

Sun Feb 27 14:55:54 GMT 2000
(gilbertt)

Modified the ipc remember command. It is compatible with the old one
however.

Originally, you'd do:
remember windowid sticky
remember windowid command
remember windowid size
etc

Now you can also do:
remember windowid sticky command size ...

This streamlines epplets in particular, and speeds up Epplet_remember by a
factor of 8. (Significant on certain boxen).


-------------------------------------------------------------------------------

Sun Feb 27 15:39:37 GMT 2000
(gilbertt)

*cough*. Now the remember ipc should actually *work*. Sorry ;)


-------------------------------------------------------------------------------

Sun Feb 27 15:54:11 GMT 2000
(gilbertt)

remove a debugging printf


-------------------------------------------------------------------------------

Mon Feb 28 18:04:33 GMT 2000
(gilbertt)

Did what I should have in the first place: consolidated all those window
list options into one winop: "Skip Window Lists", and one remember option.

The actions are still defined to do stuff individually, but users have no
need of that sort of granularity. Much nicer now :)


-------------------------------------------------------------------------------

Mon Feb 28 19:39:46 GMT 2000
(gilbertt)

64-bit fixes from Bob Arendt <rdarendt@cwcom.net>
